sass/theme/_theme.scss
/* This is an empty scss file for your custom styles - Please add your super duper awesome mega design styles here */
/* Hero Slider */
.hero-overlay {
    position: absolute;
    width: 200%;
    height: 100%;
    z-index: 2;
    background: rgba(0,0,0,0.4);
}
@include media-breakpoint-down(sm){
    .carousel-img {
        max-width: 300%;
    }
    .display-4 {
        font-size: 2em;
    }
}
/* Background Text */
@include media-breakpoint-up(sm) {
    .big-text {
        max-width: 1232px;
        color: #21242A;
        color: rgba(33, 36, 42, 0.50);
        font-size: 223px;
        font-weight: 800;
        line-height: 209px;
        position: absolute;
        top: 25px;
        padding: 50px 0;
        text-transform: uppercase;
        overflow: hidden;

    }
    .big-text-left{
        left: 0;
    }
    .big-text-right{
        right: 0;
        text-align: right;
    }
}
@include media-breakpoint-down(sm) {
    .big-text{
        display: none;
    }
}

